--- a/table.html
+++ b/table.html
@@ -6,6 +6,7 @@
     <title>tables</title>
 </head>
 <body>
+    <h1>hello</h1>
 <table border="3" cellpadding="20" cellspacing = "10" bgcolor = "grey" bordercolor="white" background="images\img.png">
         <thead>
             <tr >
